--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,35 @@
-.products ul {
+.manager {
+  margin: 0 auto;
+  width: 600px;
+  text-align: center;
+}
+
+.filters {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1rem 0;
+  margin-bottom: 1.5rem;
+}
+
+.filters > div {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+}
+
+.products {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  gap: 1rem;
+  list-style: none;
+  padding: 0;
+}
+
+.products li {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  gap: 2rem;
-  list-style: none;
+  gap: 1rem;
+  border: 1px solid black;
+  padding: 1rem;
 }
